--- a/step-7/search_tpl.xhtml
+++ b/step-7/search_tpl.xhtml
@@ -20,7 +20,7 @@
             border: black solid 3px;
             border-radius: 16px;
             box-shadow: 1px 1px gray;
-            margin: 4px;
+            margin: 12px;
             padding: 5px !important
         }
 
@@ -49,6 +49,7 @@
         .bottomline .orderby,
         .bottomline .facettotalcount {
             display: inline-block;
+            margin-top: 8px;
         }
 
         .bottomline .orderby ul,
@@ -62,7 +63,7 @@
         }
 
         .bottomline .deselectstartover {
-            float: right;
+            display: inline-block;
         }
 
         #language {
