center the spinner

--- a/step-7/search_tpl.xhtml
+++ b/step-7/search_tpl.xhtml
@@ -221,7 +221,9 @@
 <h1 style="text-align: center;">Search box</h1>
 
 <div id="facets">
-    <div class="loader">Loading facets...</div>
+    <div style="margin: 0 auto; max-width: 120px;">
+        <div class="loader">Loading facets...</div>
+    </div>
 </div>
 <div id="results"></div>
 <script type="application/javascript">
