--- a/step-2/original/athens.html
+++ b/step-2/original/athens.html
@@ -1660,7 +1660,7 @@ A modern <a href="https://en.wikipedia.org/wiki/Athens_Tram" title="Athens Tram"
  The expansion to Piraeus will include 12 new stations, increase the 
 overall length of tram route by 5.4&nbsp;km (3&nbsp;mi), and increase 
 the overall transportation network.<sup id="cite_ref-114" class="reference"><a href="#cite_note-114"><span>[</span>114<span>]</span></a></sup></p>
-<h3><span class="mw-headline" id="Athens_International_Airport">Athens International Airport</span><</h3>
+<h3><span class="mw-headline" id="Athens_International_Airport">Athens International Airport</span></h3>
 <div class="hatnote relarticle mainarticle">Main article: <a href="https://en.wikipedia.org/wiki/Athens_International_Airport" title="Athens International Airport">Athens International Airport</a></div>
 <div class="thumb tright">
 <div class="thumbinner" style="width:302px;"><a href="https://en.wikipedia.org/wiki/File:Athens_International_Airport_check_in_desks.jpg" class="image"><img alt="" src="athens_files/300px-Athens_International_Airport_check_in_desks.jpg" class="thumbimage" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Athens_International_Airport_check_in_desks.jpg/450px-Athens_International_Airport_check_in_desks.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Athens_International_Airport_check_in_desks.jpg/600px-Athens_International_Airport_check_in_desks.jpg 2x" data-file-width="2936" data-file-height="1740" width="300" height="178"></a>
