removing pagination, hopefully fixing #24

--- a/step-7/search_tpl.xhtml
+++ b/step-7/search_tpl.xhtml
@@ -256,7 +256,7 @@
             resultSelector: '#results',
             facetSelector: '#facets',
             resultTemplate: item_template,
-            paginationCount: 25,
+            enablePagination: false,
             orderByOptions: {'label': 'Label', 'type': 'Type', 'count': 'Count'},
             facetSortOption: {}
         };
