fixed height for search page, fixes #21 and fixes #24

--- a/step-7/search_tpl.xhtml
+++ b/step-7/search_tpl.xhtml
@@ -7,6 +7,7 @@
         /*<![CDATA[*/
         body {
             font-family: Verdana, sans-serif;
+            height: 88120px;
         }
 
         .facetsearch {
